[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.38", features = ["v110"] }
hudsucker= {version = "0.16.1", features = ["openssl-certs"]}

tokio = { version = "1.6.1", features = ["macros","io-util", "rt","rt-multi-thread"] }
tokio-rustls = "0.23.0"
tokio-tungstenite = { version = "0.17.0", features = ["rustls-tls-webpki-roots"] }

actix-web = { version = "4", features = ["openssl"] }
actix= "*"
reqwest ="*"
env_logger= "0.9.0"
futures= "0.3.21"

tracing = { version = "0.1.21", features = ["log"] }
time = { version = "0.3.1", optional = true }

tracing-subscriber= "0.3.9"